fix featured text behind image

--- a/src/components/styles/featured.scss
+++ b/src/components/styles/featured.scss
@@ -13,6 +13,8 @@
   }
 
   .featured {
+    display: flex;
+    flex-direction: column;
     scroll-snap-align: center;
   }
 
@@ -38,10 +40,6 @@
   .featured-container {
     padding: 0 35px;
 
-    .featured h3 {
-      margin-bottom: 5px;
-    }
-
     .title {
       margin-bottom: 20px;
     }
@@ -56,17 +54,21 @@
       margin-bottom: 35px;
     }
 
-    .images {
-      grid-template-columns: repeat(3, 1fr);
+    .featured h3 {
+      margin-top: 10px;
     }
 
-    .featured {
-      overflow: hidden;
+    .images {
+      grid-template-columns: repeat(3, 1fr);
     }
 
     .featured img {
       height: 700px;
       transform: scale(1.5);
+    }
+
+    .featured div {
+      overflow: hidden;
     }
   }
 }
